--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -10,7 +10,7 @@ body{
     background-position: center;
     background-color: rgb(0 0 0 / 42%);
 background-blend-mode: color ;
-filter: contrast(140%);
+filter: contrast(180%);
    
    flex-shrink: 0;
     border-radius: 16px;
@@ -39,4 +39,28 @@ padding: auto;
 
 
 
+}
+.offer{
+    text-align: center;
+}
+.offer-red{
+    color: #F00;
+text-align: center;
+font-size: 88px;
+font-weight: 700;
+margin-bottom: 40px;
+}
+.offer-red2{
+    color: #F00;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom:20px ;
+
+}
+.offer-image{
+    width: 802.9px;
+    height: 500px;
+    flex-shrink: 0; 
+    margin-bottom: 120px;
 }
