--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -64,3 +64,110 @@ margin-bottom: 40px;
     flex-shrink: 0; 
     margin-bottom: 120px;
 }
+.welcome{
+    background-image: url(/resources/Vectorrr.png);
+    width: 1320px;
+height: 600px;
+flex-shrink: 0;
+margin: auto;
+padding:50px ;
+background-position: center;
+background-repeat: no-repeat;
+}
+.welcome-title{
+    color: #FFF;
+font-size: 64px;
+font-weight: 900;
+text-align: left;
+padding: 120px 500px 0px 120px;
+
+}
+.welcome-descript{
+    color: rgba(255, 255, 255, 0.80);
+font-size: 18px;
+font-weight: 400;
+padding: 20px 460px 40px 120px;
+
+}
+.welcome-join{
+    color: #FFF;
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+padding: 0px 1020px 120px 150px;
+}
+.red-text{
+    color: #F00;
+font-size: 32px;
+font-weight: 600;
+}
+.place-system{
+    background-color: rgba(255, 192, 203, 0.697);
+    text-align: center;
+    margin: auto;
+    padding: 50px 200px 50px 200px;
+}
+.button-title{
+    border-radius: 8px;
+background: #F00;
+color: #FFF;
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+}
+.red-offer{
+    color: #F00;
+
+    font-size: 24px;
+
+    font-weight: 500;
+
+}
+.black-offer{
+    color: #070211;
+font-size: 48px;
+font-weight: 900;
+}
+.gray{
+    color: rgba(7, 2, 17, 0.60);
+font-size: 20px;
+font-weight: 400;
+}
+.date{
+    color: #F00;
+font-size: 48px;
+font-weight: 700;
+}
+.date-descript{
+    color: rgba(7, 2, 17, 0.60);
+font-size: 20px;
+font-weight: 400;
+padding top: ;: 50px;
+}
+.red-text{
+    color: #F00;
+font-size: 32px;
+font-weight: 600;
+}
+
+.new-offer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.date-offer{
+    padding: 50px;
+    text-align: center;}
+    .circle{
+        
+        
+        width: 300px;
+        height: 300px;
+        border: 10px solid red;
+        border-radius: 50%;
+        background-color: #FFF;
+        padding:30px ;
+    }
+    .offer-image2{
+        margin: 0;
+    }
