--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -171,3 +171,123 @@ font-weight: 600;
     .offer-image2{
         margin: 0;
     }
+    .function-data{
+        text-align: center;
+    }
+    .what-function{
+        color: #070211;
+font-size: 24px;
+font-weight: 500;
+padding-bottom: 5px;
+
+    }
+    .function-title{
+        color: #070211;
+font-size: 72px;
+font-weight: 900;
+padding-bottom: 10px;
+
+    }
+    .holiday{
+        color: #F00;
+        font-size: 72px;
+        font-weight: 900;
+            }
+ .holiday-descript{
+               
+    color: rgba(7, 2, 17, 0.60);
+font-size: 20px;
+font-weight: 500;
+padding-bottom: 200px;
+            }
+
+            .function{
+   
+                background: #FFF;
+                text-align: center;
+                /* margin: auto; */
+                
+                }
+                .bottom{
+                    /* padding: auto; */
+                    height: 150px;
+                }
+                
+                .side-img{
+                   position: right;
+                   padding: 0px 0px 0px 550px;
+                   height: 300px;
+                   width: 300px;
+                   orientation: right;
+                  
+                }
+                
+                .gift-head{
+                    color: #F00;
+                font-size: 24px;
+                font-weight: 500;
+                }
+                .gift-title{
+                    color: #070211;
+                font-size: 48px;
+                font-weight: 900;
+                }
+                .gift-descript{
+                    color: rgba(7, 2, 17, 0.60);
+                    font-size: 20px;
+                    font-weight: 400;
+                }
+                .fadein img{
+                    opacity:0.5;
+                    transition: 1s ease;
+                    }
+                    
+                    .fadein img:hover{
+                    opacity:1;
+                    transition: 1s ease;
+                    }
+
+                .subscribe-icon{
+                    width: 1320px;
+                    height: 616px;
+                    flex-shrink: 0; 
+                    border-radius: 16px;
+                    background: rgba(255, 0, 0, 0.05);
+                    text-align: center;
+                }
+            
+             .subs-icon{
+              padding-top: 60px;
+             }  
+             .subs-descript{
+                color: rgba(7, 2, 17, 0.60);
+            padding: 20px 200px 20px 200px;
+            font-size: 20px;
+            
+             }  
+             .subs-area{
+                border-radius: 16px;
+            background: rgba(255, 0, 0, 0.05);
+            border-radius: 50px;
+            background: #FFF;
+            width: 648px;
+            height: 72px;
+            flex-shrink: 0;
+             }
+             .red-btn{
+                border-radius: 0px 50px 50px 0px;
+            background: #F00;
+            color: #FFF;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 600;
+            
+             }
+             
+            .icon1{
+                gap: 10px;
+            }
+            .icon2{
+                gap: 10px;
+            }
+                
