--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -6,7 +6,7 @@ body{
 .header{
    
     height: 600px;
-   background-image: url(/resources/Banner\ Image.png);
+   background-image: url(../resources/Banner\ Image.png);
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgb(0 0 0 / 42%);
