--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -66,7 +66,7 @@ margin-bottom: 40px;
     margin-bottom: 120px;
 }
 .welcome{
-    background-image: url(/resources/Vectorrr.png);
+    background-image: url(../resources/Vectorrr.png);
     width: 1320px;
 height: 600px;
 flex-shrink: 0;
